# Fantasy-Land

./: keep_alive.py  main.py  note.json  pyproject.toml  sqlitekeyvaluestore.py  youtube.com_cookies.txt
cogs/: calc.py  mod.py  music.py  nuck.py  pack.py  sanime.py  tic.py
data/: afk.db  afkt.db  bank.db  chat.db  prefix.db  svafk.db  usercoin.db
data/level/: 626812208793255948.db  886587456898613288.db  886959744714149988.db  889411335153147934.db  890741284745138226.db  899968869446340619.db  902404699779629066.db  906135104705945660.db  906500767442145291.db  910959709446627398.db  914367844693712936.db  915630453967433768.db
