[tool.poetry]
name = "repl_python3_BetMC-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.15"
Flask = "^2.0.1"
hentai = "^3.2.8"
aiohttp = "^3.7.4"
requests = "^2.26.0"
pytz = "^2021.3"
psutil = "^5.8.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
discord = "^1.7.3"
ffmpeg = "^1.4"
urllib3 = "^1.26.7"
discord-components = "^2.1.2"
humanize = "^3.12.0"
PyNaCl = "^1.4.0"
discord-together = "^1.2.1"
googletrans = "3.1.0a0"
simpcalci = "^0.0.2"
wikipedia = {git = "https://github.com/goldsmith/Wikipedia.git"}
google-api-helper = "^0.3.1"
custom-google-search = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
